--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
-  text-align: center;
+.add-col-container {
+  padding: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.add-col-btn {
+  margin: auto;
+  width: 130px;
+  background: transparent;
+  border: 2px solid #1DA1F2;
+  color: #1DA1F2;
+  font-weight: 700;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  outline: none;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.add {
+  font-size: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.columns-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  overflow: auto;
+}
+
+.column {
+  min-width: 280px;
+  max-width: 280px;
+  text-align: center;
+  min-height: 80vh;
+  border: 4px solid gainsboro;
+  margin: 0 1px;
+}
+
+.tasks {
+  min-height: 70vh;
+  max-height: 70vh;
+  overflow: auto;
+}
+
+.col-title {
+  background: #1DA1F2;
+  color: #fff;
+  padding-bottom: 10px;
+}
+
+.col-title h4 {
+  margin: 0;
+  padding: 10px;
+}
+
+.add-task-btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background: transparent;
+  width: 80px;
+  margin: auto;
+  color: #fff;
+  border: 2px solid #fff;
+  font-weight: 700;
+  outline: none;
+  border-radius: 10px;
+}
+
+.modal-container {
+  width: 350px !important;
+}
+
+.modal-title {
+  padding: 20px;
+  margin: 0;
+  color: #fff;
+  background: #1DA1F2;
+}
+
+.modal-form {
+  padding: 20px;
+}
+
+.modal-btn-container {
+  text-align: right;
+  padding: 0 20px 20px 0;
+}
+
+.modal-btn {
+  background: #1DA1F2;
+  border: navajowhite;
+  padding: 8px 25px;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 700;
+  margin-left: 5px;
+}
+
+.task-container {
+  background: #ffffff;
+  text-align: left;
+  margin: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.task-container h5 {
+  margin: 0;
+  padding: 10px;
+}
+
+.task-container p {
+  margin: 0;
+  font-size: 12px;
+  padding: 00 10px 10px;
+  color: gray;
+  line-height: 17px;
+}
+
+.task-container button {
+  background: transparent;
+  border: 1px solid #1DA1F2;
+  padding: 5px 20px;
+  border-radius: 10px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  color: #1DA1F2;
+  outline: none;
 }
