--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
   align-items: center;
   justify-content: flex-start;
   overflow: auto;
+  margin: 10px;
 }
 
 .column {
@@ -42,15 +43,26 @@
   overflow: auto;
 }
 
-.col-title {
+.col-title-container {
   background: #1DA1F2;
   color: #fff;
   padding-bottom: 10px;
 }
 
-.col-title h4 {
+.col-title-container h4,
+h2 {
   margin: 0;
   padding: 10px;
+}
+
+.col-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.col-title h2 {
+  cursor: pointer;
 }
 
 .add-task-btn {
@@ -100,7 +112,7 @@
 .task-container {
   background: #ffffff;
   text-align: left;
-  margin: 10px;
+  margin: 0 10px 0 10px;
   border-radius: 5px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
@@ -127,4 +139,8 @@
   margin-bottom: 10px;
   color: #1DA1F2;
   outline: none;
+}
+
+.Droppable {
+  padding-top: 20px;
 }
